...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_event_required" />
        </LinearLayout>

        <TextView
            android:id="@+id/location"
            style="@style/create_event_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_location"
            android:drawablePadding="10dp"
            android:focusable="true"
...
        <EditText
            android:id="@+id/event_url"
            style="@style/create_event_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_event_link_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:visibility="gone" />

        <TextView
            android:id="@+id/place_error"
            style="@style/create_event_error"
...
