...
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/header_step"
                app:mandatory="@{@string/mandatory}"
                app:title="@{@string/action_create_title}" />

                <EditText
                    android:id="@+id/action_name"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/light_orange_opacity_50"
                    android:hint="@string/action_create_title_hint"
...
                    app:layout_constraintTop_toBottomOf="@id/action_name"
                    app:mandatory="@{@string/mandatory}"
                    app:title="@{@string/action_create_description}"
                    tools:layout_editor_absoluteX="25dp" />

                <EditText
                    android:id="@+id/action_description"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/light_orange_opacity_50"
                    android:hint="@string/action_create_description_hint"
...
