...
    <string name="create_action_wizard_p2_description">Avez-vous <b>obtenu son consentement</b> pour diffuser cette action pour elle sur Entourage ?</string>
    <string name="create_action_wizard_p2_option1">Oui, j\'ai son accord</string>
    <string name="create_action_wizard_p2_option2">Non, pas encore</string>

    <string name="create_action_wizard_p3_title">DERNIÈRE QUESTION</string>
    <string name="create_action_wizard_p3_description">Le consentement est indispensable pour pouvoir diffuser votre action solidaire sur le réseau.\n\nVotre action est actuellement en suspens. Un modérateur va vous répondre très rapidement pour vous aider.</string>
    <string name="create_action_wizard_p3_option1">@string/next</string>

    <string name="create_action_wizard_disclaimer">La &lt;a href=\'%1$s\'>Charte éthique d’Entourage&lt;/a> vous explique pourquoi le consentement est indispensable.</string>

    <!-- Entourage Join Type Fragment -->
    <string name="entourage_join_type_fragment_title">CONFIDENTIALITÉ</string>
    <string name="entourage_join_type_fragment_description">Souhaitez-vous :\n\nvalider chaque personne avant de l’accepter comme membre\n\nou que ce groupe soit ouvert à tous sans validation ?</string>
...
