...

            <TextView
                style="@style/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/ethics"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="48dp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/new_rules_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/accept"
            style="@style/h2_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/new_bg_rounded_button_orange_fill"
...
